--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "element-ui": "^2.4.1",
+    "notifyjs": "^3.0.0",
     "vue": "^2.5.16",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^6.0.0",
@@ -15,6 +17,7 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@types/notifyjs": "^3.0.0",
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
     "@vue/cli-plugin-typescript": "^3.0.0-beta.15",
@@ -23,6 +26,8 @@
     "@vue/eslint-config-typescript": "^3.0.0-rc.2",
     "lint-staged": "^6.0.0",
     "node-sass": "^4.9.0",
+    "pug": "^2.0.3",
+    "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.16"
   },
