Enable client static file cache by use nginx.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,14 @@ services:
     image: 'starbound-dashboard'
     volumes:
       - ${STARBOUND_DASHBOARD_STORAGE:-/srv/starbound-dashboard}/etc:/etc/starbound-dashboard
+      - static:/app/dist/static:ro
   nginx:
     image: 'nginx'
     depends_on:
       - web
     volumes:
       - ${STARBOUND_DASHBOARD_STORAGE:-/srv/starbound-dashboard}/srv:/srv/starbound-dashboard
+      - static:/srv/static:ro
       - type: bind
         source: ${STARBOUND_DASHBOARD_STORAGE:-/srv/starbound-dashboard}/etc
         target: /etc/starbound-dashboard
@@ -18,3 +20,6 @@ services:
         source: ${STARBOUND_DASHBOARD_STORAGE:-/srv/starbound-dashboard}/etc/nginx.conf
         target: /etc/nginx/nginx.conf
         read_only: true
+
+volumes:
+  static:
