--- a/nginx.conf
+++ b/nginx.conf
@@ -8,17 +8,20 @@ http {
     gzip            on;
     gzip_min_length 1000;
     gzip_proxied    expired no-cache no-store private auth;
-    gzip_types      text/plain application/xml;
-    
+    gzip_types      text/plain application/xml application/javascript text/css;
+    types {
+        application/javascript js;
+        text/css css;
+    }
     server {
         listen 80;
-        server_name localhost;
         location / {
             return 301 https://$server_name$request_uri;
         }
     }
     server {
         listen 443 ssl;
+        charset utf-8;
         ssl_certificate     /etc/starbound-dashboard/cert.crt;
         ssl_certificate_key /etc/starbound-dashboard/private.key;
         auth_basic           "starbound-dashboard";
@@ -28,6 +31,9 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
+        }
+        location /static {
+            root /srv;
         }
     }
 }
