--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,7 @@ http {
     types {
         application/javascript js;
         text/css css;
+        image/vnd.microsoft.icon ico;
     }
     server {
         listen 80;
